<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".Activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00693E"
        android:orientation="horizontal"
        android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@android:color/holo_green_dark"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:backgroundTint="@android:color/holo_green_dark"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00693E"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="16dp"
        android:textAllCaps="true"
        android:contentDescription="@string/sign_in_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00693E"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="16dp"
        android:textAllCaps="true"
        android:contentDescription="@string/sign_up_button" />

</LinearLayout>
